--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -27,7 +27,7 @@
 	{
 		font-size: 1.3em;
 		letter-spacing: 2px;
-		margin: 0 0 1.25em 0;
+		margin: 1em 0 0 0;
 	}
 
 	/* Tables */
@@ -176,6 +176,7 @@
 		top: 2em;
 		left: 0;
 		width: 100%;
+
 	}
 
 		#nav > ul > li
