--- a/css/style.css
+++ b/css/style.css
@@ -111,15 +111,22 @@
 	p
 	{
 		text-align: justify;
+        letter-spacing: 2px;
+        padding-bottom: 1em;
 	}
 	
-	p, ul, ol, dl, table, blockquote
+	ul, ol, dl, table, blockquote
 	{
 		margin-bottom: 2em;
         border-top: solid 4px #e5e5e5;
+
+	}
+
+    #icone
+    {
         border-top-left-radius: 30px 25px;
         border-top-right-radius: 30px 25px;
-	}
+    }
 
 	br.clear
 	{
