--- a/css/style.css
+++ b/css/style.css
@@ -1272,3 +1272,13 @@
 }
 
 /*******************************************************/
+
+
+
+
+
+/**********************************************************MYCSS*************************/
+.blocco-variabile { width: 50%; margin: 100px auto; }
+.iframe-googlemaps { width: 100%; height: 400px;  }
+
+/************************************************END_MYCSS**********************************/
