--- a/css/style.css
+++ b/css/style.css
@@ -1279,7 +1279,9 @@
 
 
 /**********************************************************MYCSS*************************/
+/*css per rendere maps responsive*/
 .blocco-variabile { width: 50%; margin: 100px auto; }
 .iframe-googlemaps { width: 100%; height: 400px;  }
+
 
 /************************************************END_MYCSS**********************************/
