--- a/css/style.css
+++ b/css/style.css
@@ -1283,5 +1283,25 @@
 .blocco-variabile { width: 50%; margin: 100px auto; }
 .iframe-googlemaps { width: 100%; height: 400px;  }
 
-
+.overlay {
+    display: none;
+    z-index: 2;
+    background: #000;
+    position: absolute;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+}
+.specialBox {
+    display: none;
+    position: relative;
+    z-index: 3;
+    margin: 150px auto 0px auto;
+    width: 800px;
+    height: 500px;
+    background: #FFF;
+    color: #000;
+}
 /************************************************END_MYCSS**********************************/
