logo univ responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1304,4 +1304,10 @@
     background: #FFF;
     color: #000;
 }
+
+.image-testata{
+    border: solid 0px #ffffff !important;
+    max-width: 100% !important;
+    height: auto;
+}
 /************************************************END_MYCSS**********************************/
