--- a/css/style.css
+++ b/css/style.css
@@ -1309,5 +1309,8 @@
     border: solid 0px #ffffff !important;
     max-width: 100% !important;
     height: auto;
+    opacity: 0.7;
 }
+
+
 /************************************************END_MYCSS**********************************/
