--- a/css/skel-noscript.css
+++ b/css/skel-noscript.css
@@ -65,7 +65,7 @@
 		.\-1u { margin-left: 8.3333333333% }
 
 		.row > * {
-			padding: 50px 0 0 50px;
+			padding: 5px 0 0 50px !important;
 			float: left;
 			-moz-box-sizing: border-box;
 			-webkit-box-sizing: border-box;
@@ -128,7 +128,7 @@
 			/* Half */
 
 				.row.half > * {
-					padding: 50px 0 0 50px;
+					padding: 5px 0 0 50px;
 				}
 
 				.row.half + .row.half > * {
