--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -26,6 +26,10 @@
 		text-align: center;
 		margin: 0 0 1.5em 0;
 	}
+    h2
+    {
+        color: #ed786a;
+    }
 
 	h2 br, h3 br, h4 br, h5 br, h6 br
 	{
