--- a/css/css_slideshow_images_text/style.css
+++ b/css/css_slideshow_images_text/style.css
@@ -143,11 +143,12 @@
 		padding: 5px 0;
 	}
 	.ei-title h2, .ei-title h3{
-		text-align: center;
+		text-align: right!important;
 	}
 	.ei-title h2{
-		font-size: 20px;
+		font-size: 18px;
 		line-height: 24px;
+       color: #ed786a !important;
 	}
 	.ei-title h3{
 		font-size: 30px;
