--- a/css/skel-noscript.css
+++ b/css/skel-noscript.css
@@ -49,7 +49,7 @@
 		.\36 u { width: 50% }
 		.\35 u { width: 41.6666666667% }
 		.\34 u { width: 33.3333333333% }
-		.\33 u { width: 25% }
+		.\33 u { width: 25%; margin-bottom: -30px }
 		.\32 u { width: 16.6666666667% }
 		.\31 u { width: 8.3333333333% }
 		.\-11u { margin-left: 91.6666666667% }
@@ -77,12 +77,13 @@
 		.row + .row > * {
 			/*padding-top: 0px;
             padding-bottom: -40px !important;*/
-            padding: 0 0 0 50px;
+            padding: 10px 0 0 50px;
 		}
 
 		.row {
-			margin-left: -0px;
+			margin-left: -50px;
             margin-bottom: -40px !important;
+
 		}
 
 	/* Rows */
@@ -92,16 +93,18 @@
 			display: block;
 			clear: both;
 			height: 0;
+            padding: 10px 0 0 50px;
 		}
 
 		.row:first-child > * {
-			padding-top: 0;
+			/*padding-top: 0;*/
+            padding: 10px 0 0 50px;
 		}
 
 		.row > * {
-			/*padding-top: 0;
-            padding-bottom: -40px;*/
-            padding: 0 0 0 50px;
+			padding-top: 0;
+            margin-bottom: -30px;
+            /*padding: 10px 0 0 50px;*/
 		}
 
 		/* Modifiers */
