--- a/css/skel-noscript.css
+++ b/css/skel-noscript.css
@@ -174,3 +174,9 @@
 				.row.double {
 					margin-left: -100px;
 				}
+
+/********************MyCSS************************/
+.result
+{
+    width: 50%;
+}
